[SC-11222] fixed left sidebar overlapping

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -58,7 +58,7 @@
                 overflow: hidden;
             }
             &.fixed-filters .main-wrapper {
-                margin-left: 340px;
+                padding-left: 340px;
             }
         }
     }
@@ -73,7 +73,7 @@
 
 .advice-period[module^="cfo"] {
     .clipboard-holder > i.save-to-clipboard {
-        display: none!important;    
+        display: none!important;
     }
 }
 
